--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -3,7 +3,18 @@ on:
   pull_request:
     types:
       - opened
+    branches:
+      - master
+      - "dev-*"
+      - "feat/**"
   workflow_dispatch:
+  push:
+    branches:
+      - master
+      - "dev-*"
+      - "feat/**"
+    paths-ignore:
+      - ".github/woekflows/*"
 jobs:
   deploy:
     runs-on: ubuntu-latest
